<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--<string name="app_name">Hue - Dusk and Dawn</string>-->
    <string name="action_settings">Settings</string>
    <string name="no_bridge">No Bridge Found.   Start Bridge Search</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_find_bridge">Find new bridge</string>
    <string name="search_progress">Searching ...</string>
    <string name="connecting">Connecting ...</string>
    <string name="txt_could_not_connect">No connection</string>
    <string name="could_not_find_bridge">Hue cannot find your bridge. Please check that it is connected to the same Wi-Fi router as your app and press</string>
    <string name="btn_more">More</string>
    <string name="btn_reconnect">Reconnect</string>
    <string name="enter_light_name">Enter light name</string>
    <string name="txt_sdk_version">SDK Version</string>
    <string name="menu_find_bridge">Find new Bridge</string>
    <string name="menu_refresh">Refresh</string>
    <string name="btn_retry">Retry</string>
    <string name="searching_for_bridges">Searching for Bridges</string>
    <string name="txt_selectbridges">Available Access Points</string>
    <string name="txt_pushlink">Pushlink</string>
    <string name="press_pushlink_button">Press the link button on the bridge</string>
    <string name="txt_select_smartbridge">Please select a bridge to use for this app</string>
    <string name="title_error">Error</string>
    <string name="txt_last_heartbeat">Last Heartbeat : </string>
    <string name="btn_demo">Demo</string>

    <!--EULA-->
    <string name="txt_eula_title">Disclaimer of Warranties</string>
    <string name="txt_eula_content">
        "Please use with caution and setup a backup alarm for the first few times of use!\n\n"
        "There is no guaranty that this App works! For example due to a bug this App does not wake you up there are no warranties for any damages that arise from waking up late.\n\n"
        "IN NO EVENT WILL THE AUTHORS BE HELD LIABLE FOR ANY DAMAGES ARISING FROM THE USE OF THIS SOFTWARE. IF YOU DO NOT WISH TO DO SO, DO NOT USE THE SOFTWARE.\n\n"
        "Read the End User Licence Agreement for this App in the Google Play Store for further information."
    </string>
    <string name="btn_agree">Agree</string>
    <string name="btn_decline">Decline</string>

    <!--Main menu-->
    <string name="txt_set_wake_in_time">Wake me up…</string>
    <string name="txt_set_wake_end_in_time">Set the time from wakeup schedule till wakeup end schedule.</string>
    <string name="btn_updated_schedules">Update</string>
    <string name="btn_days">Days</string>
    <string name="action_help">Help</string>
    <string name="btn_pick_time">Pick Time</string>

    <!--Sound alarm-->
    <string name="txt_sound_alarm">Sound alarm</string>
    <string name="txt_offset_sound_alarm">Offset sound alarm: %d Minutes (after wake time)</string>
    <string name="txt_alarm_settings">Alarm settings</string>
    <string name="txt_pick_alarm_sound">Pick alarm sound</string>
    <string name="txt_play_alarm_sound">Play alarm sound</string>
    <string name="txt_snooze_time">Snooze duration: %d Minutes</string>
    <string name="txt_alarm_started">Time to wake up!</string>
    <string name="btn_stop_alarm">Stop!</string>
    <string name="btn_close_alarm">Close</string>
    <string name="btn_snooze_alarm">Snooze</string>
    <string name="txt_alarm_status_active">Playing music</string>
    <string name="txt_alarm_status_snooze">Snoozing until: %s</string>
    <string name="txt_alarm_dismiss_alarm">Dismiss scheduled snooze?</string>
    <string name="txt_alarm_status_stopped">Alarm stopped</string>
    <string name="txt_no_alarm_sound_picked">No alarm sound picked yet</string>
    <string name="txt_status_error_pick">Error on selecting alarm sound.</string>
    <string name="txt_status_sound_picked">Sound picked</string>
    <string name="txt_sound_alarm_settings">Settings: Sound alarm</string>

    <!--Light wake-->
    <string name="txt_hue_wake_lights">Hue wake lights</string>
    <string name="txt_lights_settings">Lights settings</string>
    <string name="txt_set_light_time">Start lights %d minutes before wake time</string>
    <string name="txt_select_light_schedule">Select hue schedule for wake up</string>
    <string name="txt_set_light_end_time">Shutdown lights %d minutes after wake time</string>
    <string name="txt_select_light_end_schedule">Select hue schedule for lights shutdown</string>
    <string name="txt_hue_wake_settings">Settings: Hue wake lights</string>

    <!--Light sleep-->
    <string name="txt_hue_sleep_light">Hue sleep light</string>
    <string name="txt_sleep_light_schedule">Select hue schedule to turn off lights for sleep</string>
    <string name="txt_light_sleep_settings">Light sleep settings</string>
    <string name="txt_hue_sleep_settings">Settings: Hue sleep light</string>

    <!--Status-->
    <string name="txt_status">Status</string>
    <string name="txt_status_connected">Connected</string>
    <string name="txt_status_not_connected">Not connected</string>
    <string name="txt_status_stopped">Stopped (Connection uncertain)</string>
    <string name="txt_status_checking_connection">Checking connection…</string>
    <string name="txt_status_reconnecting">Reconnecting…</string>
    <string name="txt_status_reconnect_failed">Reconnect failed</string>
    <string name="txt_status_updating">Updating…</string>
    <string name="txt_status_update_finished">Update finished</string>
    <string name="txt_status_updated_nothing">Updated nothing</string>
    <string name="txt_status_wrong_format">Wrong format. Use: "HH[:MM[:SS]]".</string>
    <string name="txt_status_current_setting">Current: %s</string>
    <string name="txt_status_no_schedule_found">No schedule found</string>
    <string name="txt_status_not_set">Not set or disabled</string>
    <string name="txt_status_outdated">Outdated</string>
    <string name="txt_status_disabled">Disabled</string>
    <string name="txt_status_alarm_on">ON: %s</string>
    <string name="txt_status_alarm_off">OFF</string>
    <string name="txt_status_update_failed">Update failed. Try reconnect.</string>
    <string name="txt_status_bridge_not_found">No bridge. Try reconnect.</string>
    <string name="txt_status_demo">Offline DEMO</string>

    <!--Days Settings-->
    <string name="txt_wake_up_on_days">Wakeup on days:</string>
    <string name="monday">Monday</string>

    <!--Settings -->
    <string name="txt_minutes_offset">%d Minutes</string>


    <!--Help page-->
    <string name="txt_help_image">Help image</string>
    <string name="txt_help_name">Getting started</string>
    <string name="txt_help_description">
        "This is a step by step guide to get started. Once the app is setup, you will mainly only "
        "need the last step.\n\n"

        "Notes:\n"
        "All custom hue schedules must be setup in the standard hue app or any other that is able to do this."
        "This app comes with default schedules to start right away, but the possibilities for "
        "customization are limited.\n\n"

        "1, Setup the Sound alarm, Hue wake and sleep lights. Do this by tapping the "
        "settings icons (blue circles on the right) in each component respectively.\n"
        "1a, In \"Sound alarm\" settings you can choose the sound to wake up to.\n"
        "1b, In \"Hue wake lights\" settings you can select the hue schedules for waking up and "
        "a second one to switch of the lights again after some time. The offset for "
        "the wake up light (before wakeup) and the switch off (after wakeup) can also be set here.\n"
        "1c, In \"Hue sleep light\" settings you can select the hue sleep schedule."
        "No offset can be set, because it just starts as soon as \"update\" is taped (see 4.)\n\n"
        "2, Activate the components you want to use with the switch buttons in the center (green circles)\n\n"
        "3, Setup a relative time (from now) in which you want to wake up in the top (purple circle). "
        "All the offsets set up in 1x steps are relative to this time. You can toggle the button "
        "to wake you 'at' that time instead of 'in' that amount of time.\n\n"
        "4, Press the Update button in bottom left corner (orange circle). This will calculate the "
        "absolute time for the Sound alarm, Hue wake and sleep lights and sets it accordingly when activated. "
        "You will see the new time on the left side of each component."
        "Make sure you are connected before pressing the button (see text below button)! "
        "When not connected, just press the Reconnect (bottom right) button or restart the app."
    </string>

    <!--Common-->
    <string name="onByI">I</string>
    <string name="offByO">O</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_keep">Keep</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="txt_time_hour_minute">%d:%d</string>
    <string name="btn_toggle_in">in</string>
    <string name="btn_toggle_at">at</string>
    <string name="btn_reset_defaults">Reset Default Schedules</string>

</resources>
