<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/wakeLightTimeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/txt_hue_wake_lights"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wakeLightStatusTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignBaseline="@+id/lightSwitch"
                android:layout_marginStart="5dp"
                android:text="@string/txt_status" />

            <ImageButton
                android:id="@+id/lightSettingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wakeLightTimeTxt"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:src="@drawable/ic_settings_black_24dp"
                android:contentDescription="@string/txt_lights_settings" />

            <Switch
                android:id="@+id/lightSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/lightSettingsBtn"
                android:layout_toStartOf="@id/lightSettingsBtn"
                android:layout_marginEnd="48dp"
                android:textOn="@string/onByI"
                android:textOff="@string/offByO"
                android:switchMinWidth="55dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

