<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/alarmTimeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:text="@string/txt_sound_alarm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alarmStatusTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/alarmSwitch"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:text="@string/txt_status" />

            <ImageButton
                android:id="@+id/alarmSettingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/alarmTimeTxt"
                android:layout_margin="5dp"
                android:contentDescription="@string/txt_alarm_settings"
                android:src="@drawable/ic_settings_black_24dp" />

            <Switch
                android:id="@+id/alarmSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/alarmSettingsBtn"
                android:layout_marginEnd="48dp"
                android:layout_toStartOf="@id/alarmSettingsBtn"
                android:switchMinWidth="55dp"
                android:showText="true"
                android:textOff="@string/offByO"
                android:textOn="@string/onByI" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
