<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/sleepLightCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sleepLightTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:text="@string/txt_hue_sleep_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sleepStatusTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/sleepLightTxt"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_status" />

            <ImageButton
                android:id="@+id/sleepLightSettingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:contentDescription="@string/txt_light_sleep_settings"
                android:src="@drawable/ic_settings_orange" />

            <Switch
                android:id="@+id/sleepSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/sleepLightSettingsBtn"
                android:layout_marginEnd="48dp"
                android:showText="true"
                android:textOn="@string/onByI"
                android:textOff="@string/offByO"
                android:switchMinWidth="55dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>