<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!--SLEEP LIGHT SCHEDULE-->
    <android.support.v7.widget.CardView
        android:id="@+id/sleepLightSettingsCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/sleepLightScheduleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/txt_sleep_light_schedule" />

            <Spinner
                android:id="@+id/sleepLightSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sleepLightScheduleTxt"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/sleepLightSettingsOkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:background="@color/okBtn"
            android:text="@string/btn_ok" />

        <Button
            android:id="@+id/sleepLightSettingsCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/sleepLightSettingsOkBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:background="@color/cancelBtn"
            android:text="@string/btn_cancel" />
    </RelativeLayout>

</LinearLayout>
